# ModularMusicGeneration

./: CMakeLists.txt  README.md
Private/: AMIDIPlayer.cpp  ModularMusicGenerator.cpp  SchedulerExample.cpp  SimpleMIDIPlayer.cpp  dump.cpp  mp.cpp
Public/: AMIDIPlayer.h  Debug.h  IntensityLayer.h  Layer.h  LayerManager.h  MIDIPlayer.h  Metronome.h  ModularMusicGenerator.h  SchedulerExample.h  SimpleBeatLayer.h  SimpleMIDIPlayer.h  TaskScheduler.h  mp.h
